--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -28,12 +28,15 @@
       "database_id": "0d171edd-36ac-4c1b-ad60-9eaed8460b5a",
       "migrations_dir": "./migrations"
     }
-  ]
+  ],
   // "ai": {
   //   "binding": "AI"
   // },
-  // "observability": {
-  //   "enabled": true,
-  //   "head_sampling_rate": 1
-  // }
+  "observability": {
+    "enabled": true,
+    "head_sampling_rate": 1
+  },
+  "placement": {
+    "mode": "smart"
+  }
 }
