--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "packageManager": "pnpm@10.5.2+sha256.79a98daa90248b50815e31460790f118c56fe099113370826caa0153be6daba5",
   "pnpm": {
     "onlyBuiltDependencies": [
+      "@prisma/client",
       "bcrypt",
       "esbuild",
       "sharp",
